--- a/css/app.css
+++ b/css/app.css
@@ -71,10 +71,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .wrapper {
   width: 100%;
+  overflow-x: hidden;
 }
 
 .wrapper .header {
-  position: fixec;
   width: 100%;
   height: 4vh;
   display: flex;
@@ -174,15 +174,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .wrapper .main .section .card {
-  width: 80%;
-  height: 250px;
+  width: 70%;
   margin-left: 15%;
   border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: #b1a7a6;
   margin-top: 10px;
   overflow: hidden;
+  box-shadow: 2px 4px 20px 0px #848c93;
   padding: 10px;
+  margin-top: 40px;
 }
 
 .wrapper .main .section .card:first-of-type {
@@ -196,26 +197,29 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper .main .section .card .card_head {
   display: grid;
   width: 100%;
-  grid-template-columns: 2fr 10fr 1fr;
+  grid-template-columns: 1fr 12fr 1fr;
 }
 
 .wrapper .main .section .card .card_head img {
   width: 50px;
   height: 50px;
-  margin-left: 20px;
+  margin-left: 15px;
   border-radius: 50px;
 }
 
 .wrapper .main .section .card .card_head .user {
   display: grid;
   grid-template-rows: 1fr 1fr;
+  width: 100%;
 }
 
 .wrapper .main .section .card .card_head .user .name {
+  padding-left: 10px;
   width: 100%;
 }
 
 .wrapper .main .section .card .card_head .user .time {
+  padding-left: 10px;
   width: 100%;
 }
 
@@ -226,53 +230,97 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
 }
 
-.wrapper .main .section .card .card_main {
+.wrapper .main .section .card .card_head .more:hover {
+  background-color: #d3d3d3;
+}
+
+.wrapper .main .section .card .card__main {
+  display: inline-block;
+  width: 100%;
+  padding: 10px 0px;
+}
+
+.wrapper .main .section .card .card__main p {
+  color: black;
+  font-size: 18px;
+  letter-spacing: .5px;
+  font-family: 'Titillium WEB', cursive;
+}
+
+.wrapper .main .section .card .card__main .gallery {
+  display: inline-block;
+  width: 100%;
+}
+
+.wrapper .main .section .card .card__main .gallery img {
+  display: inline-block;
+  width: 100%;
+  height: 250px;
+  background-position: center center;
+  background-size: cover;
+  padding: 10px 0px 0px 0px;
+}
+
+.wrapper .main .section .card .LikeCommentShare {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 60%;
-  overflow-y: scroll;
+  justify-content: space-between;
+  text-align: center;
+  padding: 5px 0px;
+  border-top: 1px solid rgba(128, 128, 128, 0.788);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.788);
 }
 
-.wrapper .main .section .card .card_main::-webkit-scrollbar {
-  display: none;
+.wrapper .main .section .card .LikeCommentShare span {
+  width: 200px;
+  text-transform: capitalize;
 }
 
-@media (max-width: 600px) {
-  .wrapper .main .section .card .card_main {
-    padding-top: 50px;
-  }
-}
-
-.wrapper .main .section .card .card_footer {
-  margin-top: 10px;
-  width: 100%;
-  height: auto;
-}
-
-.wrapper .main .section .card .card_footer .buttonai {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-top: 1px solid black;
-}
-
-.wrapper .main .section .card .card_footer .buttonai .like {
-  width: 50%;
-  background-color: #b1a7a6;
-}
-
-.wrapper .main .section .card .card_footer .buttonai .comment {
-  width: 50%;
-  background-color: #b1a7a6;
-}
-
-.wrapper .main .section .card .card_footer input {
-  width: 100%;
+.wrapper .main .section .card .LikeCommentShare span:hover {
+  background-color: #d3d3d3;
   border-radius: 50px;
-  margin-top: 5px;
-  background-color: #f5f3f4;
+}
+
+.wrapper .main .section .card .card__footer {
+  display: grid;
+  grid-template-columns: 1fr 10fr 4fr;
+  width: 100%;
+  padding: 10px 0px 5px 0px;
+}
+
+.wrapper .main .section .card .card__footer img {
+  display: inline;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.wrapper .main .section .card .card__footer textarea {
+  border: 1px solid grey;
+  border-radius: 10px;
+  resize: none;
+  padding: 10px 6px 0px 6px;
+  margin: 0px 10px;
+}
+
+.wrapper .main .section .card .card__footer .actions {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.wrapper .main .section .card .card__footer .actions .fa {
+  display: grid;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding-top: 10px;
+  font-size: 20px;
+}
+
+.wrapper .main .section .card .card__footer .actions .fa:hover {
+  background-color: #d3d3d3;
+  border-radius: 50px;
 }
 
 .wrapper .main .section .right {
