--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,8 +1,8 @@
 .wrapper {
   width: 100%;
+  overflow-x: hidden;
   .header {
-    position: fixec;
-    width: 100%;
+     width: 100%;
     height: 4vh;
     display: flex;
     background-color: #d3d3d3;
@@ -86,15 +86,16 @@
         display: none;
       }
       .card {
-        width: 80%;
-        height: 250px;
+        width: 70%;
         margin-left: 15%;
         border: 1px solid black;
-        border-radius: 5px;
+        border-radius: 10px;
         background-color: #b1a7a6;
         margin-top: 10px;
         overflow: hidden;
+        box-shadow: 2px 4px 20px 0px rgb(132, 140, 147);
         padding: 10px;
+        margin-top: 40px;
         &:first-of-type {
           margin-top: 20px;
         }
@@ -104,20 +105,21 @@
         .card_head {
           display: grid;
           width: 100%;
-          grid-template-columns: 2fr 10fr 1fr;
+          grid-template-columns: 1fr 12fr 1fr;
           img {
             width: 50px;
             height: 50px;
-            margin-left: 20px;
+            margin-left: 15px;
             border-radius: 50px;
           }
           .user {
             display: grid;
             grid-template-rows: 1fr 1fr;
-            .name {
+            width: 100%;
+            .name { padding-left: 10px;
               width: 100%;
             }
-            .time {
+            .time {padding-left: 10px;
               width: 100%;
             }
           }
@@ -126,47 +128,88 @@
             display: flex;
             justify-content: center;
             align-items: center;
-          }
-        }
-        .card_main {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          height: 60%;
-          overflow-y: scroll;
-          &::-webkit-scrollbar {
-            display: none;
-          }
-          @media (max-width: 600px) {
-            padding-top: 50px;
-          }
-        }
-        .card_footer {
-          margin-top: 10px;
-          width: 100%;
-          height: auto;
-          .buttonai {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-top: 1px solid black;
-            .like {
-              width: 50%;
-              background-color: #b1a7a6;
-            }
-            .comment {
-              width: 50%;
-              background-color: #b1a7a6;
+            &:hover {
+              background-color: #d3d3d3;
             }
           }
-          input {
-            width: 100%;
-            border-radius: 50px;
-            margin-top: 5px;
-            background-color: #f5f3f4;
-          }
         }
+        .card__main {
+          display: inline-block;
+          width: 100%;
+          padding: 10px 0px;
+          p {
+              color: black;
+              font-size: 18px;
+              letter-spacing: .5px;
+              font-family: 'Titillium WEB', cursive;
+          }
+          .gallery {
+              display: inline-block;
+              width: 100%;
+              img {
+                  display: inline-block;
+                  width: 100%;
+                  height: 250px;
+                  background-position: center center;
+                  background-size: cover;
+                  padding: 10px 0px 0px 0px;
+              }
+          }
+      }
+    
+    .LikeCommentShare {
+        display: flex;
+        justify-content: space-between;
+         text-align: center;
+        padding: 5px 0px;
+        border-top: 1px solid rgba(128, 128, 128, 0.788);
+        border-bottom: 1px solid rgba(128, 128, 128, 0.788);
+        span {
+            width: 200px;
+            text-transform: capitalize;
+            &:hover {
+              background-color: #d3d3d3;
+              border-radius: 50px;
+            }
+        }
+      }
+        .card__footer {
+          display: grid;
+          grid-template-columns: 1fr 10fr 4fr;
+          width: 100%;
+          padding: 10px 0px 5px 0px;
+          img {
+              display: inline;
+              width: 40px;
+              height: 40px;
+              border-radius: 20px;
+              text-align: center;
+              
+          }
+          textarea {
+              border: 1px solid grey;
+              border-radius: 10px;
+              resize: none;
+              padding: 10px 6px 0px 6px;
+              margin: 0px 10px;
+          }
+          .actions {
+              display: grid;
+              width: 100%;
+              grid-template-columns: 1fr 1fr 1fr 1fr;
+                         .fa {
+                  display: grid;
+                  width: 40px;
+                  height: 40px;
+                  text-align: center;
+                  padding-top: 10px;
+                  font-size: 20px;
+                  &:hover {
+                    background-color: #d3d3d3;
+                    border-radius: 50px;}
+              }
+          }
+      }
       }
       .right {
         width: 100%;
