--- a/css/app.css
+++ b/css/app.css
@@ -160,6 +160,28 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper .main .left {
   width: 100%;
   height: 96vh;
+  display: flex;
+  justify-content: center;
+}
+
+.wrapper .main .left .draugai h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  font-weight: 900;
+  padding: 20px 0;
+}
+
+.wrapper .main .left .draugai .sarasas {
+  display: block;
+  width: 100%;
+}
+
+.wrapper .main .left .draugai .sarasas .para {
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
 }
 
 .wrapper .main .section {
