--- a/css/app.css
+++ b/css/app.css
@@ -187,6 +187,7 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper .main .section {
   width: 100%;
   height: 96vh;
+  box-shadow: 2px 4px 20px 0px #848c93;
   background-color: #f5f3f4;
   overflow-y: scroll;
 }
