--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -103,6 +103,7 @@
     .section {
       width: 100%;
       height: 96vh;
+      box-shadow: 2px 4px 20px 0px rgb(132, 140, 147);
       background-color: #f5f3f4;
       overflow-y: scroll;
       &::-webkit-scrollbar {
