--- a/css/app.css
+++ b/css/app.css
@@ -266,8 +266,13 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper .main .section .card .card__main p {
   color: black;
   font-size: 18px;
-  letter-spacing: .5px;
   font-family: 'Titillium WEB', cursive;
+}
+
+.wrapper .main .section .card .card__main span {
+  color: blue;
+  font-size: 12px;
+  cursor: pointer;
 }
 
 .wrapper .main .section .card .card__main .gallery {
