--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -174,6 +174,7 @@
           .gallery {
               display: inline-block;
               width: 100%;
+              //............
               img {
                   display: inline-block;
                   width: 100%;
