--- a/css/app.css
+++ b/css/app.css
@@ -299,6 +299,16 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper .main .section .card .card__main .gallery {
   display: inline-block;
   width: 100%;
+  position: relative;
+}
+
+.wrapper .main .section .card .card__main .gallery .more__foto {
+  position: absolute;
+  color: red;
+  bottom: 50px;
+  right: 50px;
+  font-size: 50px;
+  cursor: pointer;
 }
 
 .wrapper .main .section .card .card__main .gallery .gallery__wrap {
